# fuel_consumption_monitoring

./: README.md  pyproject.toml
analysis/: constants.py  lr_model.py  utils.py
final_results/: bar_plot_car.html  bar_plot_van.html
